--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.gitignore.io/api/venv,python
 # Edit at https://www.gitignore.io/?templates=venv,python
 
-
+/.idea
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
